--- a/challenge/pom.xml
+++ b/challenge/pom.xml
@@ -42,9 +42,9 @@
 		<dependency>
 			<groupId>org.projectlombok</groupId>
 			<artifactId>lombok</artifactId>
-			<version>1.18.24</version>
-			<scope>provided</scope>
-			<optional>true</optional>
+			<version>1.18.26</version>
+<!--			<scope>provided</scope>-->
+<!--			<optional>true</optional>-->
 		</dependency>
 		<!-- Spring Boot starter for logging (includes SLF4J, Logback) -->
 		<dependency>
