fields added in property file

--- a/challenge/src/main/resources/application.properties
+++ b/challenge/src/main/resources/application.properties
@@ -1,1 +1,25 @@
 spring.application.name=challenge
+
+# Server configuration
+server.port=8081
+
+# Spring logging configuration
+logging.level.org.springframework=INFO
+logging.level.com.dws.challenge=DEBUG
+logging.file.name=logs/application.log
+
+# Spring profiles configuration (optional for different environments like dev, prod)
+spring.profiles.active=dev
+
+# Jackson (JSON processing) configuration
+spring.jackson.serialization.write-dates-as-timestamps=false
+
+# JPA and DataSource settings if you were using a database (these can be omitted if you are using in-memory repository)
+#spring.datasource.url=jdbc:h2:mem:testdb
+#spring.datasource.driverClassName=org.h2.Driver
+#spring.datasource.username=sa
+#spring.datasource.password=password
+#spring.jpa.hibernate.ddl-auto=update
+
+# Server session timeout (optional)
+server.session.timeout=30m
